# InPlaceReplace

./: .gitignore  Makefile  README  bar.cpp  bar.h  basic_example.py  complex_example.py  demo.sh  dummy.cpp  dummy.h  env.sh  main.cpp  show_ast.py
InPlaceReplace/: CMakeLists.txt
InPlaceReplace/src/: InPlaceReplace.cpp
UseCase/src/: dummy.cpp  dummy.h  main.cpp
cpp/: CMakeLists.txt
cpp/src/: main.cpp
python/: basic_example.py  complex_example.py  demo.sh
test/: CMakeLists.txt
test/src/: bar.cpp  bar.h  dummy.cpp  main.cpp
